--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(SequenceDebug
         SequenceDebug.cpp
         Sequence.cpp
         Sequence.h
+        SequenceNode.cpp
 )
 
 # once you have everything in Sequence implemented, you can run SequenceTestHarness
@@ -16,6 +17,7 @@ add_executable(SequenceTestHarness
         SequenceTestHarness.cpp
         Sequence.cpp
         Sequence.h
+        SequenceNode.cpp
 )
 
 # Make SequenceDebug the default startup target
